# ComputerVisionBlog

./: .gitignore
simpleVideo/: CMakeLists.txt
simpleVideo/src/: main.cpp
